# Research-Track-1

./: README.md  frames_2026-04-07_11.50.03.gv  frames_2026-04-07_15.28.48.gv  frames_2026-04-13_09.44.00.gv
install/: local_setup.sh  setup.sh
install/action_assignment/share/action_assignment/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/action_tutorials_interfaces/share/action_tutorials_interfaces/: local_setup.sh  package.sh  package.xml
install/assignment1_rt/share/assignment1_rt/: local_setup.sh  package.sh
install/assignment1_rt_py/lib/assignment1_rt_py/: distance  distance_calc  simple_spawner  turtle2  turtle_spawn  turtles  two_turtles
install/assignment1_rt_py/share/assignment1_rt_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/assignment1_rt_py/share/assignment1_rt_py/launch/: node_launch.py
install/assignment2_rt_py/lib/assignment2_rt_py/: distance  robot_controller  robot_controller2
install/assignment2_rt_py/share/assignment2_rt_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/assignment_1_rt2/lib/assignment_1_rt2/: cancel_client_exe  client_exe  server_exe  user_interface.py
install/assignment_1_rt2/share/assignment_1_rt2/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/bme_gazebo_sensors/share/bme_gazebo_sensors/: package.sh
install/cmake_package/share/cmake_package/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/exam_example/lib/exam_example/: distance  turtle2  turtles
install/exam_example/share/exam_example/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/exam_example_2/lib/exam_example_2/: distance  robot_controller
install/exam_example_2/share/exam_example_2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/exam_example_2/share/exam_example_2/launch/: simulation.launch.py
install/fibonacci/lib/fibonacci/: fibonacci_client  fibonacci_client_2  fibonacci_client_3  fibonacci_server  fibonacci_server_2  fibonacci_server_3  fibonacci_server_4  fibonacci_server_5
install/fibonacci/share/fibonacci/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/first_package_cpp/lib/first_package_cpp/: subscriber_component_exe  subscriber_exe  talker  talker_component_exe  talker_exe
install/first_package_cpp/share/first_package_cpp/: local_setup.sh  package.dsv  package.ps1  package.sh
install/first_package_py/lib/first_package_py/: pub  sub
install/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/log/: latest_build
log/: latest_build
src/action_assignment/: CMakeLists.txt
src/action_tutorials_interfaces/: CMakeLists.txt
src/action_tutorials_interfaces/action/: Assignment1RT2.action  Tut1.action
src/action_tutorials_interfaces/msg/: UserInput.msg
src/assignment1_rt/: CMakeLists.txt  package.xml
src/assignment1_rt/launch/: node_launch.py
src/assignment1_rt/src/: ReadMe  ReadMe.md  ReadMe.txt  distance_calc.cpp  turtle_spawn.py  two_turtles.cpp
src/assignment1_rt_py/: setup.py
src/assignment1_rt_py/assignment1_rt_py/: two_turtles.py
src/assignment2_rt_py/: package.xml  setup.py
src/assignment2_rt_py/assignment2_rt_py/: ReadMe.md  distance_calc.py  robot_controller.py  two_turtles.py
src/assignment2_rt_py/launch/: simulation.launch.py
src/assignment_1_rt2/: CMakeLists.txt  package.xml
src/assignment_1_rt2/launch/: simulation.launch.py
src/assignment_1_rt2/src/: action_client.cpp  action_server.cpp  cancel_action.cpp  user_interface.py
src/exam_example/: setup.cfg  setup.py
src/exam_example/exam_example/: distance_calc.py  two_turtles.py
src/exam_example_2/: setup.cfg  setup.py
src/exam_example_2/exam_example_2/: distance_calc.py
src/exam_example_2/launch/: simulation.launch.py
src/fibonacci/: setup.py
src/fibonacci/fibonacci/: action_server_2.py  action_server_3.py  basic_client.py
src/first_package_cpp/: CMakeLists.txt
src/first_package_cpp/launch/: composition.launch.py
src/first_package_cpp/src/: client.cpp  first_package.cpp  manual_composition.cpp  service.cpp  subscriber.cpp  subscriber_component.cpp  subscriber_component2.cpp  talker.cpp  talker_component.cpp  talker_component2.cpp
src/first_package_py/: setup.py
src/first_package_py/first_package_py/: pub.py  sub.py
src/ob_first_package_cpp/: CMakeLists.txt
src/ob_first_package_cpp/src/: ob_first_package.cpp  ob_sub.cpp
src/python_package/: package.xml  setup.py
src/python_tf2_pkg/: package.xml  setup.cfg  setup.py
src/python_tf2_pkg/launch/: broadcaster.launch.py  broadcaster2.launch.py  demo2.launch.py
src/python_tf2_pkg/python_tf2_pkg/: broadcaster.py  carrot.py  simple_quaternions.py  static_broad.py
src/robot_custom_msgs/: CMakeLists.txt  package.xml
src/turtle_action_client/: package.xml  setup.cfg  setup.py
src/turtle_action_client/turtle_action_client/: cancel_action_client.py  complete_action_client.py
src/turtlesim_controller/: CMakeLists.txt  package.xml
src/turtlesim_controller/launch/: turtlesim.launch.py
src/turtlesim_controller/src/: Uses_time  Using_theta  turtlesim_controller.cpp  turtlesim_controller2.cpp  turtlesim_controller3.cpp  turtlesim_service.cpp  turtlesim_services.py
src/tutorial_1_action/: package.xml  setup.cfg  setup.py
src/tutorial_1_action/launch/: simulation.launch.py
src/tutorial_1_action/tutorial_1_action/: action_client.py  action_server_.py  cancel_client.py
src/tutorial_1_action_cpp/: CMakeLists.txt  package.xml
src/tutorial_1_action_cpp/include/tutorial_1_action_cpp/launch/: composition.launch.py
src/tutorial_1_action_cpp/launch/: simulation.launch.py
src/tutorial_1_action_cpp/src/: action_client.cpp  action_server.cpp  cancel_action.cpp
turtlesim_custom_msgs/: CMakeLists.txt  package.xml
turtlesim_custom_msgs/srv/: Average.srv  Threshold.srv  Velocity.srv
(+236 files in other folders)
