cmake_minimum_required(VERSION 3.8)
project(assignment1_rt)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(turtlesim REQUIRED)
find_package(geometry_msgs REQUIRED)

add_executable(turtles src/two_turtles.cpp)  #turtle is chosen as executable name
ament_target_dependencies(turtles rclcpp turtlesim geometry_msgs)

add_executable(distance src/distance_calc.cpp)  #distance is chosen as executable name
ament_target_dependencies(distance rclcpp turtlesim geometry_msgs)


install(TARGETS 
  turtles
  DESTINATION lib/${PROJECT_NAME}
)

install(TARGETS 
  distance
  DESTINATION lib/${PROJECT_NAME}
)

#replaces what setup.py does in a python package
install(PROGRAMS
  src/turtle_spawn.py   # The actual file name in your folder
  DESTINATION lib/${PROJECT_NAME}
  RENAME turtle2        # The name you want to type in the terminal
)


# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
