<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>exam_example_2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="stefania.germena3@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>turtlesim_custom_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>ros2launch</build_depend> 
  <build_depend>gazebo_ros</build_depend> 
  <build_depend>bme_gazebo_sensors</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>turtlesim_custom_msgs</exec_depend>
  
  <exec_depend>ros2launch</exec_depend> 
  <exec_depend>gazebo_ros</exec_depend> 
  <exec_depend>bme_gazebo_sensors</exec_depend> 

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
